# standalone-haddock

./: .gitignore  README.md  doc.hs  stack.yaml  standalone-haddock.cabal
Cabal/: Haddock.hs  Simple.hs
src/: Cabal.hs  Main.hs
src/Cabal/: Haddock.hs  Simple.hs
