name:                standalone-haddock
version:             1.4.0.0
synopsis:            Generate standalone haddock documentation for a set of packages
homepage:            https://documentup.com/ktvoelker/standalone-haddock
bug-reports:         https://github.com/ktvoelker/standalone-haddock/issues
license:             MIT
license-file:        LICENSE
author:              Roman Cheplyaka
maintainer:          Karl Voelker <standalone-haddock@karlv.net>
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10
description:
  standalone-haddock generates standalone haddock Haskell documentation.
  .
  When you simply run `cabal haddock`, the resulting HTML documentation contains
  hyperlinks to other packages on your system. As a result, you cannot publish it
  on the internet (well, you can, but the links will be broken).
  .
  standalone-haddock takes several packages for which you want to publish
  documentation. It generates documentation for them with proper links:
  .
  * links to identifiers inside this package set are relative
  .
  * links to identifiers from external packages lead to Hackage
  .
  Thus the resulting directory with HTML files is relocatable and publishable.

source-repository head
    type: git
    location: https://github.com/ktvoelker/standalone-haddock.git

executable standalone-haddock
  main-is:             Main.hs
  other-modules:       
    Cabal.Haddock
    Cabal.Simple
  build-depends:
    base >= 4.11 && < 5,
    Cabal >= 2.4 && < 2.6,
    filepath,
    directory,
    containers,
    optparse-applicative
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
